--- a/app/assets/html/brandMain/avene/brand-page-eau-thermale-avene-banner-carrousel.html
+++ b/app/assets/html/brandMain/avene/brand-page-eau-thermale-avene-banner-carrousel.html
@@ -22,7 +22,7 @@
             <img alt="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" src="Main-banner/1711_AV_trixera_MainBN_crop.jpg?$staticlink$" title="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" />
         </a>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <div class="banner-message">
              <div class="banner-text0">공식몰특별혜택</div>
             <div class="banner-text1">100% 미네랄 저자극, </div>
@@ -33,6 +33,11 @@
         </div>
         <a href="$url('Page-Show','cid','event-9')$">
             <img alt="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" src="Main-banner/MainBN_Avene-03.jpg?$staticlink$" title="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" />
+        </a>
+    </div> -->
+    <div class="item">
+        <a href="$url('Product-Show','pid','538797')$">
+            <img alt="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" src="Main-banner/1711_AV_eauthemale_mainBN_w.jpg?$staticlink$" title="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" />
         </a>
     </div>
     <div class="item">
@@ -49,9 +54,14 @@
             <img alt="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" src="Main-banner/1711_AV_trixera_MainBN_m.jpg?$staticlink$" title="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" />
         </a>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <a href="$url('Page-Show','cid','event-9')$">
             <img alt="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" src="Main-banner/MainBN_Avene-03-m.jpg?$staticlink$" title="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" />
+        </a>
+    </div> -->
+    <div class="item">
+        <a href="$url('Product-Show','pid','538797')$">
+            <img alt="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" src="Main-banner/1711_AV_eauthemale_mainBN_m.jpg?$staticlink$" title="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" />
         </a>
     </div>
     <div class="item">
