--- a/app/assets/html/main/home-banner-carrousel.html
+++ b/app/assets/html/main/home-banner-carrousel.html
@@ -22,11 +22,17 @@
             <img alt="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" src="Main-banner/1711_AV_trixera_MainBN_crop.jpg?$staticlink$" title="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" />
         </a>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <a href="$url('Page-Show','cid','event-9')$">
             <img alt="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" src="Main-banner/MainBN_Avene-03.jpg?$staticlink$" title="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" />
         </a>
+    </div> -->
+    <div class="item">
+        <a href="$url('Product-Show','pid','538797')$">
+            <img alt="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" src="Main-banner/1711_AV_eauthemale_mainBN_w.jpg?$staticlink$" title="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" />
+        </a>
     </div>
+
 
     <div class="item">
         <a href="$url('Page-Show','cid','event-12')$">
@@ -39,9 +45,14 @@
             <img class="lazyOwl" alt="클로란 한달 후, 뿌리부터 달라지는 힘있는 모발! " data-src="Main-banner/1711_KL_quinine_mainBN_w.jpg?$staticlink$" title="klorane_클로란 한달 후, 뿌리부터 달라지는 힘있는 모발!" />
         </a>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <a href="$url('Search-Show','q','케라크닐')$">
             <img class="lazyOwl" alt="ducray_저자극 특허성분 미르타신 여드름성 피부적합 듀크레이 케라크닐" data-src="Main-banner/1711_DU_keracryl_mainBN_w.jpg?$staticlink$" title="ducray_저자극 특허성분 미르타신 여드름성 피부적합 듀크레이 케라크닐" />
+        </a>
+    </div> -->
+    <div class="item">
+        <a href="$url('Product-Show','pid','519193')$">
+            <img alt="ducray_케라크닐PP_지성 트러블성 피부 스팟 전용 SOS 크림" src="Main-banner/MainBN_Ducray.jpg?$staticlink$" title="ducray_케라크닐PP_지성 트러블성 피부 스팟 전용 SOS 크림" />
         </a>
     </div>
 
@@ -60,9 +71,14 @@
             <img alt="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" src="Main-banner/1711_AV_trixera_MainBN_m.jpg?$staticlink$" title="avene_더 가볍지만 더 오랜보습 NEW 아벤느 트릭세라" />
         </a>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <a href="$url('Page-Show','cid','event-9')$">
             <img alt="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" src="Main-banner/MainBN_Avene-03-m.jpg?$staticlink$" title="avene_피부, 리플레이가 필요한 순간 아벤느 시칼파트" />
+        </a>
+    </div> -->
+    <div class="item">
+        <a href="$url('Product-Show','pid','538797')$">
+            <img alt="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" src="Main-banner/1711_AV_eauthemale_mainBN_m.jpg?$staticlink$" title="avene_진정, 회복미스트. 유럽 No.1 온천수 아벤느 오떼르말" />
         </a>
     </div>
     <div class="item">
@@ -75,9 +91,14 @@
             <img class="lazyOwl" alt="klorane_클로란 한달 후, 뿌리부터 달라지는 힘있는 모발!" data-src="Main-banner/1711_KL_quinine_mainBN_m.jpg?$staticlink$" title="klorane_클로란 한달 후, 뿌리부터 달라지는 힘있는 모발!" />
         </a>
     </div>
-    <div class="item">
+    <!-- <div class="item">
         <a href="$url('Search-Show','q','케라크닐')$">
             <img class="lazyOwl" alt="ducray_저자극 특허성분 미르타신 여드름성 피부적합 듀크레이 케라크닐" data-src="Main-banner/1711_DU_keracryl_mainBN_m.jpg?$staticlink$" title="ducray_저자극 특허성분 미르타신 여드름성 피부적합 듀크레이 케라크닐" />
+        </a>
+    </div> -->
+    <div class="item">
+        <a href="$url('Product-Show','pid','519193')$">
+            <img alt="ducray_케라크닐PP_지성 트러블성 피부 스팟 전용 SOS 크림" src="Main-banner/MainBN_Ducray-m.jpg?$staticlink$" title="ducray_케라크닐PP_지성 트러블성 피부 스팟 전용 SOS 크림" />
         </a>
     </div>
     <div class="item">
