오 떼르말 , 씨칼파트 어워즈 추가

--- a/app/assets/html/detail/524822.html
+++ b/app/assets/html/detail/524822.html
@@ -62,22 +62,31 @@
 
         <div class="contents">
             <ul>
-                <li>
+                <!-- <li>
                     <img alt="" src="AV/a03/a03_av03.png?$staticlink$" />
                     <div class="text">
                         <span>2016 IMS Health 조사 유럽 약국 화장품</span>
-                        <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
+                        <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" /><div class="vline"></div>
                         <div class="vline"></div>
                         <p>더모 코스메틱 부문 판매 1위</p>
                     </div>
-                </li>
+                </li> -->
               <li>
                   <img alt="" src="AV/a03/a03_av06.png?$staticlink$" />
                   <div class="text">
                       <span>2016 IMS Health 조사 유럽 약국 화장품</span>
-                      <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
+                      <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" /><div class="vline"></div>
                       <div class="vline"></div>
                       <p>온천수 부문 판매 1위</p>
+                  </div>
+              </li>
+              <li>
+                  <img alt="" src="AV/a03/a03_award3.png?$staticlink$" />
+                  <div class="text">
+                      <span>2017 올리브영 헬스 & 뷰티 어워즈</span>
+                      <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
+                      <div class="vline"></div>
+                      <p>더모 코스메틱 온천수 미스트 부문 1위</p>
                   </div>
               </li>
               <li>
