--- a/app/assets/html/detail/538798.html
+++ b/app/assets/html/detail/538798.html
@@ -1,4 +1,8 @@
 <div class="product-view-170512">
+
+    <img src="AV/bn/gift-bar-av04.jpg?$staticlink$" alt="" class="gift-bar-p" style="margin: 15px 0 100px;">
+    <img src="AV/bn/gift-bar-av04-m.jpg?$staticlink$" alt="" class="gift-bar-m" style="margin: 15px 0;">
+
     <div class="article a01">
         <div class="con_right">
             <h1 class="h1_head">진정 회복 미스트</h1>
@@ -63,32 +67,32 @@
         <div class="contents">
             <ul>
                 <li>
-                    <img alt="" src="AV/a03/a03_av03.png?$staticlink$" />
+                    <img alt="" src="AV/a03/a03_av06.png?$staticlink$" />
                     <div class="text">
                         <span>2016 IMS Health 조사 유럽 약국 화장품</span>
-                        <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
+                        <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" /><div class="vline"></div>
                         <div class="vline"></div>
-                        <p>더모 코스메틱 부문 판매 1위</p>
+                        <p>온천수 부문 판매 1위</p>
                     </div>
                 </li>
-              <li>
-                  <img alt="" src="AV/a03/a03_av06.png?$staticlink$" />
-                  <div class="text">
-                      <span>2016 IMS Health 조사 유럽 약국 화장품</span>
-                      <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
-                      <div class="vline"></div>
-                      <p>온천수 부문 판매 1위</p>
-                  </div>
-              </li>
-              <li>
-                  <img alt="" src="AV/a03/a03_pouderroom_mist.png?$staticlink$" />
-                  <div class="text">
-                      <span>2017 코스메랭킹 파우더룸</span>
-                      <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
-                      <div class="vline"></div>
-                      <p>미스트/픽서 부문 1위</p>
-                  </div>
-              </li>
+                <li>
+                    <img alt="" src="AV/a03/a03_award3.png?$staticlink$" />
+                    <div class="text">
+                        <span>2017 올리브영 헬스 & 뷰티 어워즈</span>
+                        <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
+                        <div class="vline"></div>
+                        <p>더모 코스메틱 온천수 미스트 부문 1위</p>
+                    </div>
+                </li>
+                <li>
+                    <img alt="" src="AV/a03/a03_pouderroom_mist.png?$staticlink$" />
+                    <div class="text">
+                        <span>2017 코스메랭킹 파우더룸</span>
+                        <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
+                        <div class="vline"></div>
+                        <p>미스트/픽서 부문 1위</p>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
@@ -298,7 +302,7 @@
 
         <div class="contents">
             <ul>
-                <li><a href="$httpUrl('Product-Show','pid','530126')$">
+                <li><a href="$httpUrl('Product-Show','pid','MPAV-37')$">
                     <h3>01</h3>
 
                     <h4>미셀라 로션</h4>
@@ -307,7 +311,7 @@
                     <img alt="" src="AV/a09/AV_01_37.jpg?$staticlink$" />
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
-                <li><a href="$httpUrl('Product-Show','pid','529938')$">
+                <li><a href="$httpUrl('Product-Show','pid','MPAV-39')$">
                     <h3>02</h3>
 
                     <h4>젠틀 토닝 로션</h4>
@@ -316,7 +320,7 @@
                     <img alt="" src="AV/a09/AV_01_39.jpg?$staticlink$" />
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
-                <li><a href="$httpUrl('Product-Show','pid','517833')$">
+                <li><a href="$httpUrl('Product-Show','pid','MPAV-20')$">
                     <h3>03</h3>
 
                     <h4>CPI 스킨 리커버리 크림</h4>
@@ -325,7 +329,7 @@
                     <img alt="" src="AV/a09/AV_01_20.jpg?$staticlink$" />
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
-                <li><a href="$httpUrl('Product-Show','pid','649111')$">
+                <li><a href="$httpUrl('Product-Show','pid','MPAV-3')$">
                     <h3>04</h3>
 
                     <h4>시칼파트 S.O.S 크림</h4>
