--- a/app/assets/html/detail/MPAV-3.html
+++ b/app/assets/html/detail/MPAV-3.html
@@ -72,6 +72,17 @@
                       <p>피부 손상 개선 부문 판매 1위</p>
                   </div>
               </li>
+              <li>
+                  <img alt="" src="AV/a03/a03_pouderroom_cream.png?$staticlink$" />
+                  <div class="text">
+                      <span>2017 코스메랭킹 파우더룸</span>
+                      <img alt="" src="detail_layout/a03_line.jpg?$staticlink$" />
+                      <div class="vline"></div>
+                      <p>크림 부문 1위</p>
+                  </div>
+              </li>
+
+
             </ul>
         </div>
     </div>
