운영사이트에 노출 안되는 배너들 임시적 주석처리

--- a/app/assets/html/brandMain/aderma/brand-page-eau-thermale-aderma-banner-carrousel.html
+++ b/app/assets/html/brandMain/aderma/brand-page-eau-thermale-aderma-banner-carrousel.html
@@ -17,11 +17,11 @@
 </style>
 <!-- Slider For Desktop -->
 <div id="homepage-slides" class="owl-carousel owl-theme">
-    <div class="item slide1">
+    <!-- <div class="item slide1">
         <a href="$url('Product-Show','pid','510854')$">
             <img class="lazyOwl" alt="aderma_엑소메가 크림_정품 립밤증정+구매금액별 사은품까지" data-src="Main-banner/1710_MainBN_EXOMEGA.jpg?$staticlink$" title="aderma_엑소메가 크림_정품 립밤증정+구매금액별 사은품까지" />
         </a>
-    </div>
+    </div> -->
     <div class="item slide2">
         <a href="$url('Product-Show','pid','519399')$">
             <img alt="aderma_엑소메가 로션_0% 방부제 극건성 피부용 보습제" src="Main-banner/MainBN_Aderma.jpg?$staticlink$" title="aderma_엑소메가 로션_0% 방부제 극건성 피부용 보습제" />
@@ -31,11 +31,11 @@
 
 <!-- Slider For Mobile -->
 <div id="homepage-slides-mobile" class="owl-carousel owl-theme hide-on-desktop">
-    <div class="item slide1">
+    <!-- <div class="item slide1">
         <a href="$url('Product-Show','pid','510854')$">
             <img class="lazyOwl" alt="aderma_엑소메가 크림_정품 립밤증정+구매금액별 사은품까지" data-src="Main-banner/1710_MainBN_EXOMEGA-M.jpg?$staticlink$" title="aderma_엑소메가 크림_정품 립밤증정+구매금액별 사은품까지" />
         </a>
-    </div>
+    </div> -->
     <div class="item slide2">
         <a href="$url('Product-Show','pid','519399')$">
             <img alt="aderma_엑소메가 로션_0% 방부제 극건성 피부용 보습제" src="Main-banner/MainBN_Aderma-m.jpg?$staticlink$" title="aderma_엑소메가 로션_0% 방부제 극건성 피부용 보습제" />
