--- a/app/assets/html/brandMain/klorane/brand-page-eau-thermale-klorane-banner-carrousel.html
+++ b/app/assets/html/brandMain/klorane/brand-page-eau-thermale-klorane-banner-carrousel.html
@@ -17,7 +17,7 @@
     </style>
     <!-- Slider For Desktop -->
     <div id="homepage-slides" class="owl-carousel owl-theme">
-        <div class="item slide2">
+        <!-- <div class="item slide2">
             <a href="$url('Product-Show','pid','211351')$">
                 <img class="lazyOwl" alt="클로란 한달 후, 뿌리부터 달라지는 힘있는 모발! " data-src="Main-banner/1711_KL_quinine_mainBN_w.jpg?$staticlink$" title="한달 후, 뿌리부터 달라지는 힘있는 모발!" />
             </a>
@@ -26,7 +26,7 @@
             <a href="$url('Product-Show','pid','220086')$">
                 <img class="lazyOwl" alt="klorane_클로란 망고 기획세트 함께사면 샴푸가 반값!" data-src="Main-banner/1710_MainBN_Mango.jpg?$staticlink$" title="klorane_클로란 망고 기획세트 함께사면 샴푸가 반값!" />
             </a>
-        </div>
+        </div> -->
         <div class="item slide3">
             <a href="$url('Search-Show','q','베베')$">
                 <img alt="klorane_베이비 페어 세트 40% off" src="Main-banner/MainBN_Klorane-02.jpg?$staticlink$" title="klorane_베이비 페어 세트 40% off" />
@@ -41,7 +41,7 @@
 
     <!-- Slider For Mobile -->
     <div id="homepage-slides-mobile" class="owl-carousel owl-theme hide-on-desktop">
-        <div class="item slide1">
+        <!-- <div class="item slide1">
             <a href="$url('Product-Show','pid','211351')$">
                 <img class="lazyOwl" alt="클로란 한달 후, 뿌리부터 달라지는 힘있는 모발!" data-src="Main-banner/1711_KL_quinine_mainBN_m.jpg?$staticlink$" title="한달 후, 뿌리부터 달라지는 힘있는 모발!" />
             </a>
@@ -50,7 +50,7 @@
             <a href="$url('Product-Show','pid','220086')$">
                 <img class="lazyOwl" alt="klorane_클로란 망고 기획세트 함께사면 샴푸가 반값!" data-src="Main-banner/1710_MainBN_Mango-M.jpg?$staticlink$" title="klorane_클로란 망고 기획세트 함께사면 샴푸가 반값!" />
             </a>
-        </div>
+        </div> -->
         <div class="item slide3">
             <a href="$url('Search-Show','q','베베')$">
                 <img alt="klorane_베이비 페어 세트 40% off" src="Main-banner/MainBN_Klorane-m-02.jpg?$staticlink$" title="klorane_베이비 페어 세트 40% off" />
