신규 제품 추가 및 배너 수정

--- a/app/assets/html/detail/MPAV-48.html
+++ b/app/assets/html/detail/MPAV-48.html
@@ -1,4 +1,8 @@
 <div class="product-view-170512">
+
+    <img src="AV/bn/210439_w.jpg?$staticlink$" alt="" class="gift-bar-p" style="margin: 15px 0 100px;">
+    <img src="AV/bn/210439_m.jpg?$staticlink$" alt="" class="gift-bar-m" style="margin: 15px 0;">
+
     <div class="article a01">
         <div class="con_right">
             <h1 class="h1_head" style="color:#1baf8d;">시칼파트 블루젤</h1>
