--- a/app/assets/html/detail/MPAV-6.html
+++ b/app/assets/html/detail/MPAV-6.html
@@ -1,4 +1,8 @@
 <div class="product-view-170512">
+
+    <img src="AV/bn/512864_w.jpg?$staticlink$" alt="" class="gift-bar-p" style="margin: 15px 0 100px;">
+    <img src="AV/bn/512864_m.jpg?$staticlink$" alt="" class="gift-bar-m" style="margin: 15px 0;">
+
     <div class="article a01">
         <div class="con_left"><img alt="이드랑스 라이트 하이드레이팅 크림" src="AV/a01/AV_01_06.jpg?$staticlink$" /></div>
 
@@ -169,7 +173,10 @@
                 </div>
 
                 <div class="answer">
-                    <p>세럼은 통상적으로 흡수성이 좋은 텍스처로 고농도의 활성 성분이 포함되어 있습니다. 따라서 수분 세럼을 사용하면 보다 빠른 효과를 볼 수 있으며, 지속적인 보습 효과를 위해서는 세럼과 크림을 순차적으로 사용하시면 좋습니다. 아벤느 이드랑스 하이드레이팅 세럼의 경우 아벤느 온천수 77%가 리포좀에 쌓여 피부 깊숙이 전달되며, 이드랑스 하이드레이팅 크림은 피부 속 수분이 손실되지 않도록 방패막 역할을 하는 막을 형성해 수분이 피부 내에 골고루 흡수되도록 도와줍니다.</p>
+                    <p>세럼은 통상적으로 흡수성이 좋은 텍스처로 고농도의 활성 성분이 포함되어 있습니다. 따라서 수분 세럼을 사용하면 보다 빠른 효과를 볼 수 있으며,
+                        지속적인 보습 효과를 위해서는 세럼과 크림을 순차적으로 사용하시면 좋습니다. 아벤느 이드랑스 하이드레이팅 세럼의 경우 아벤느 온천수 77%가 리포좀에
+                         쌓여 피부 깊숙이 전달되며, 이드랑스 하이드레이팅 크림은 피부 속 수분이 손실되지 않도록 방패막 역할을 하는 막을 형성해 수분이 피부 내에 골고루
+                         흡수되도록 도와줍니다.</p>
                 </div>
             </div>
 
@@ -180,7 +187,7 @@
         <div class="article_title"><span>이렇게 사용해보세요</span></div>
 
         <div class="contents">
-            <div class="a08_box dn">
+            <!-- <div class="a08_box dn">
                 <ul>
                     <li>
                         <img alt="" src="detail_layout/a08_dummy.jpg?$staticlink$" />
@@ -188,7 +195,7 @@
                         <p>스킨케어 마지막 단계에서 적당량을 덜어 얼굴과 목에 부드럽게 발라줍니다.</p>
                     </li>
                 </ul>
-            </div>
+            </div> -->
 
             <div class="a08_tip">
                 <div class="a08_box_tip">
@@ -234,7 +241,7 @@
 
                     <h4>오 떼르말</h4>
 
-                    <p>피부 고학이 담긴<br>No.1 진정 회복 미스트</p>
+                    <p>피부 과학이 담긴<br>No.1 진정 회복 미스트</p>
                     <img alt="" src="AV/a09/AV_01_04.jpg?$staticlink$" />
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
