--- a/app/assets/html/detail/MPAV-5.html
+++ b/app/assets/html/detail/MPAV-5.html
@@ -1,4 +1,8 @@
 <div class="product-view-170512">
+
+    <img src="AV/bn/512902_w.jpg?$staticlink$" alt="" class="gift-bar-p" style="margin: 15px 0 100px;">
+    <img src="AV/bn/512902_m.jpg?$staticlink$" alt="" class="gift-bar-m" style="margin: 15px 0;">
+
     <div class="article a01">
         <div class="con_right">
             <h1 class="h1_head">온천수 수분 크림 (건성용)</h1>
@@ -180,7 +184,7 @@
         <div class="article_title"><span>이렇게 사용해보세요</span></div>
 
         <div class="contents">
-            <div class="a08_box dn">
+            <!-- <div class="a08_box dn">
                 <ul>
                     <li>
                         <img alt="" src="detail_layout/a08_dummy.jpg?$staticlink$" />
@@ -188,7 +192,7 @@
                         <p>스킨케어 마지막 단계에서 적당량을 덜어 얼굴과 목에 부드럽게 발라줍니다.</p>
                     </li>
                 </ul>
-            </div>
+            </div> -->
 
             <div class="a08_tip">
                 <div class="a08_box_tip">
@@ -234,7 +238,7 @@
 
                     <h4>오 떼르말</h4>
 
-                    <p>피부 고학이 담긴<br>No.1 진정 회복 미스트</p>
+                    <p>피부 과학이 담긴<br>No.1 진정 회복 미스트</p>
                     <img alt="" src="AV/a09/AV_01_04.jpg?$staticlink$" />
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
