--- a/app/assets/html/detail/MPAV-7.html
+++ b/app/assets/html/detail/MPAV-7.html
@@ -1,4 +1,8 @@
 <div class="product-view-170512">
+
+    <img src="AV/bn/523471_w.jpg?$staticlink$" alt="" class="gift-bar-p" style="margin: 15px 0 100px;">
+    <img src="AV/bn/523471_m.jpg?$staticlink$" alt="" class="gift-bar-m" style="margin: 15px 0;">
+
     <div class="article a01">
         <div class="con_right">
             <h1 class="h1_head">온천수 입체 수분 세럼</h1>
